--- a/css/index.css
+++ b/css/index.css
@@ -16,14 +16,11 @@ img {
 
 .movie-item {
     width: 100%;
-    height: 350px;
     position: relative;
 }
 
 .movie-item img {
     pointer-events: none;
-    position: absolute;
-    top: 0;
 }
 
 .movie-item h2 {
@@ -31,4 +28,6 @@ img {
     color: white;
     position: absolute;
     bottom: 0;
+    width: 100%;
+    text-align: center;
 }
