--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,39 @@
 body {
-    padding: 40px;
+    width: 80%;
+    background-color: darkslategray;
+    margin: 3em auto 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+    min-width: 450px;
 }
 
-.movies {
-    column-count: 3;
+.search-form {
+    top: 3em;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.search-form input {
+    padding: 0.35em 0.75em;
+    font-size: 1.2em;
+    flex: 2 0;
+}
+
+.search-form button {
+    flex: 1 0;
+    margin-left: 20px;
+}
+
+.movies-grid {
+  display: grid;
+  width: 100%;
+  max-width: 990px;
+  margin: 0 auto;
+  
+  grid-template-columns: repeat(3, 1fr);
+  
+  grid-gap: 20px;
 }
 
 img {
@@ -17,13 +47,16 @@ img {
 .movie-item {
     width: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .movie-item img {
     pointer-events: none;
 }
 
-.movie-item h2 {
+.movie-item .movie-title {
+    font-size: 24px;
+    padding-bottom: 20px;
     pointer-events: none;
     color: white;
     position: absolute;
