--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,13 @@
 body {
     width: 80%;
-    background-color: darkslategray;
+    background-color: #1a1a1a;
     margin: 3em auto 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;;
     min-width: 450px;
+}
+
+body.modal-open {
+    overflow: hidden;
 }
 
 .search-form {
@@ -27,12 +31,10 @@ body {
 
 .movies-grid {
   display: grid;
-  width: 100%;
+  width: 90%;
   max-width: 990px;
   margin: 0 auto;
-  
   grid-template-columns: repeat(3, 1fr);
-  
   grid-gap: 20px;
   margin-bottom: 50px;
 }
@@ -49,19 +51,75 @@ img {
     width: 100%;
     position: relative;
     overflow: hidden;
+    color: white;
 }
 
 .movie-item img {
     pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.7s;
+}
+
+.movie-item img.loaded {
+    opacity: 1;
 }
 
 .movie-item .movie-title {
-    font-size: 24px;
-    padding-bottom: 20px;
+    font-size: 20px;
     pointer-events: none;
-    color: white;
     position: absolute;
-    bottom: 0;
+    bottom: 20px;
     width: 100%;
     text-align: center;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+}
+
+.detail {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 1;
+}
+
+.detail.hidden {
+    display: none;
+}
+
+.detail-modal {
+    position: relative;
+    width: 90%;
+    margin: 3em auto 0 auto;
+    padding-top: 50px;
+    background-color: #262626;
+    border-radius: 5px;
+}
+
+.detail-modal video {
+    width: 94%;
+    display: block;
+    margin: 0 auto;
+}
+
+.detail-modal .close-button {
+    position: absolute;
+    right: 25px;
+    top: 15px;
+}
+
+.detail-modal .metadata {
+    padding: 30px;
+}
+
+.detail-modal .metadata h2 {
+    color: #eeeeee;
+}
+
+.detail-modal .metadata .description {
+    color: #cccccc;
 }
