--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ body.modal-open {
 
 .search-form button {
     flex: 1 0;
-    font-size: 1.7em;
+    font-size: 1.3em;
     margin-left: 20px;
     border-radius: 20px;
 }
@@ -70,6 +70,10 @@ img.loader {
     width: 10%;
     height: auto;
     margin: 0 auto;
+    display: block;
+}
+
+img.loader.hidden {
     display: none;
 }
 
